--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_830376_qzecyukz0s.css">
-    <title>vue-manage-system</title>
+    <title>计距评测平台</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vms doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>javascript被禁用，无法使用</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
